--- a/css/rootstyle.css
+++ b/css/rootstyle.css
@@ -4,6 +4,11 @@
   --blue: hsl(248, 32%, 49%);
   --dark-blue: hsl(249, 10%, 26%);
   --grayish-blue: hsl(246, 25%, 77%);
+
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
 }
 
 * {
@@ -14,5 +19,13 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
+      font-size: 16px;
+      background: var(--red) url('/images/bg-intro-mobile.png') no-repeat center center;
+      background-size: cover;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 4rem 2rem 2rem 2rem;
 }
