--- a/css/rootstyle.css
+++ b/css/rootstyle.css
@@ -20,12 +20,11 @@
 body {
   font-family: "Poppins", sans-serif;
       font-size: 16px;
-      background: var(--red) url('/images/bg-intro-mobile.png') no-repeat center center;
       background-size: cover;
       color: white;
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      padding: 4rem 2rem 2rem 2rem;
+      background-color: var(--red);
 }
