--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,3 @@
-@import url(./fonts.css);
-@import url(./rootstyle.css);
-@import url(./form.css);
+@import "./fonts.css";
+@import "./rootstyle.css";
+@import "./form.css";
